# llm-finetuning

./: .gitignore  LICENSE  README.md  backend.Dockerfile  docker-compose.yaml  frontend.Dockerfile  pyproject.toml
app/: main.py
app/api/: generate.py  health.py
app/core/: streamlit_runner.py
app/db/: init_db.py  session.py
app/models/: query_log.py
app/services/: inference.py
app/utils/: prompt.py
frontend/: app.py
model/adapters/gemma2b-support-lora/checkpoint-939/: adapter_config.json  adapter_model.safetensors  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
notebooks/: csv_to_jsonl.ipynb  customer_support_llm_finetuning.ipynb  dataset.ipynb
